--- a/froggy/style.css
+++ b/froggy/style.css
@@ -15,7 +15,6 @@ body {
   width: 90%;
   max-width: 1200px;
   margin: 0 auto;
-  padding: 5 px;
   text-align: center;
   position: relative;
 }
@@ -92,4 +91,8 @@ figcaption {
   font-style: normal;
   font-variation-settings:
     "wdth" 100;
+}
+
+.hand:active {
+  cursor: url('images/cursor-removebg-preview.png');
 }
