--- a/froggy/style.css
+++ b/froggy/style.css
@@ -17,12 +17,14 @@ body {
   margin: 0 auto;
   text-align: center;
   position: relative;
+  padding: 10px;
 }
 
 .froggo {
   width: 100%;
-  max-width: 600px;
+  max-width: 800px;
   height: auto;
+  margin-bottom: 5px;
 }
 
 button {
@@ -33,6 +35,11 @@ button {
   background-color: #002e0f;
   font-size: 16px;
   cursor: pointer;
+  margin: 5px;
+}
+
+h2 {
+font-size: 30px;
 }
 
 .worm {
@@ -56,6 +63,7 @@ button {
   align-items: center;
   justify-content: center; /* Centers items horizontally */
   gap: 15px;
+  padding: 10px;
 }
 
 p {
@@ -64,8 +72,9 @@ p {
 }
 
 h1 {
-  font-size: 50px;
+  font-size: 80px;
   color: rgb(219, 211, 93);
+  margin: 5px;
 }
 
 figcaption {
